--- a/web/templates/status.html
+++ b/web/templates/status.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <title>{{ token_name }} - Status</title>
-    <link rel="stylesheet" href="/static/css/status.css?v=1760815874">
+    <link rel="stylesheet" href="/static/css/status.css?v=1760815875">
 </head>
 <body>
     <div class="status-page">
@@ -226,7 +226,7 @@
                     icon: '!'
                 },
                 'major_outage': {
-                    text: 'Major System Outage',
+                    text: 'System Outage',
                     class: 'down',
                     icon: '×'
                 },
