--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -1183,7 +1183,7 @@ input[type="checkbox"]:checked::before {
 
 .toast.show {
     opacity: 1;
-    top: 0;
+    top: 70px;
     transform: translateX(-50%);
 }
 
